Implémentation de la logique de salle de jeu